fix bug where user can hide sign in button behind note, fix sign in screen flash for persist

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,10 +4,12 @@ $white: rgb(250, 250, 250);
 $blue: rgb(4, 97, 207);
 
 body {
+  display: none; // https://github.com/firebase/quickstart-js/issues/58#issuecomment-244492935
   font-family: 'Lato', sans-serif;
   box-sizing: border-box;
   color: rgba( $black, .9 );
   background-color: rgba( $blue, .2 );
+  margin: 0;
 }
 
 input, .text-area {
@@ -35,6 +37,10 @@ input, .text-area {
   padding-left: 12px;
   padding-right: 12px;
   padding-bottom: 8px;
+  z-index: 1000;
+  background-color: rgba( $blue, .3 );
+  box-shadow: 0 2px 15px 0 rgba( $black, .1 );
+  border-bottom: 1px solid rgba( $black, .1 );
 
   .tool-bar-typed {
     font-size: 2em;
